
2009-03-18 Rob Scharpf <rscharpf@jhsph.edu> - committed version 1.0.57
* Added steps object to instantiateObjects to speed up debugging
* Reformulated the regression for chromosome X
   -  estimate cross-hybridization using chromosome X
* Take into account pseudo-autosomal regions on chr X for copy number estimation
* Replaced get() and assign() with '<-' operations to improve readability
* Function to compute posterior means of copy number estimates

2009-03-19 Rob Scharpf - committed version 1.0.59
* Requires genomewidesnp6Crlmm version 1.0.1 or greater

2009-03-25 Rob Scharpf - committed version 1.0.60
* simplified some of the preliminary steps for the computeCopynumber function
** crlmm output subset within the body of the function
* modified vignette -- store results in an oligoSnpSet object (for now)
* added function to extract the date from the celfile headers (celDates)

2009-03-25 Rob Scharpf - committed version 1.0.61
* update to copynumber vignette

2009-03-27 B Carvalho - committed version 1.0.62

* crlmm() returns a SnpSet object (from Biobase)

* fixed standard vignette to accommodate this change

* redefined calls/confs to accommodate this change

* fixed documentation to acommodate this change

2009-03-28 B Carvalho - committed version 1.0.64
* modified crlmm and cnrma to look for data at extdata/

2009-03-29 Rob Scharpf - committed version 1.0.65

* update to copynumber vignette

* updated computeCopynumber.Rd to accommodate SnpSet objects and
  changes to genomewidesnp6Crlmm

* cnrma function requires the cdfName

* update man files for cnrma and computeCopynumber

2009-03-30 Matt Ritchie - committed version 1.0.66

* added functions to read in idat files, pre-process and genotype 
data from Illumina SNP arrays (functions named readIdatFiles() 
and crlmmIllumina() in crlmm-illumina.R)

* added man pages for these functions

2009-04-01 Matt Ritchie - committed version 1.0.67

* added import statement for normalize.quantiles